# notion-react-planner-agent

./: README.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: mongo.py
backend/app/models/: ai_task.py  calendar_event.py  goal.py  project.py  task.py  user.py
backend/app/routes/: auth_routes.py  calendar_routes.py  deps.py  goal_routes.py  project_routes.py  task_routes.py
backend/app/services/: calendar_service.py  llm.py  task_service.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ai-assistant/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/api/goals/: route.ts
frontend/app/api/goals/[goalId]/: route.ts
frontend/app/api/projects/: route.ts
frontend/app/api/register/: route.ts
frontend/app/calendar/: page.tsx
frontend/app/components/: DashboardLayout.tsx  Sidebar.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/app/components/ui/: Button.tsx  Input.tsx
frontend/app/dashboard/: page.tsx
frontend/app/focus-mode/: page.tsx
frontend/app/goals/: page.tsx
frontend/app/habits/: page.tsx
frontend/app/login/: page.tsx
frontend/app/notes/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/tasks/: page.tsx
frontend/lib/: auth.ts
frontend/lib/services/: auth.ts
frontend/types/: js-cookie.d.ts  next-auth.d.ts
(+1 files in other folders)
