[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-mistralai>=1.1.4",
    "langgraph>=1.1.10",
    "notion-client>=3.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
