[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-core>=1.3.3",
    "langchain-mistralai>=1.1.4",
    "langgraph>=1.1.10",
    "motor>=3.7.1",
    "notion-client>=3.0.0",
    "pydantic-settings>=2.14.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
